--- a/Grid/Grid.html
+++ b/Grid/Grid.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Grid Demonstration</title>
+    <title>Grid Demo</title>
     <link rel="stylesheet" type="text/css" href="../css/grid.css"/>
 </head>
 <body>
-    <h1>Grid Demonstration</h1>
+    <h1>Grid Demostration</h1>
     <div class="wrapper">
         <div>One</div>
         <div>Two</div>
