--- a/canyon-description/canyon.html
+++ b/canyon-description/canyon.html
@@ -3,11 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Canyon Description</title>
 </head>
 <body>
-    <div class="wrapper"></div>
-    <div class="img"><img src="../images/picture.jpg"/></div>
-    <div class="img-text">This is a picture of saxophone</div>
+    <div class="wrapper2">
+        <div class="img"><img src="../images/picture.jpg"/></div>
+        <div class="img-text">This is a picture of a good saxophone</div>
+    </div>
+
+    <div><a href="../index.html">Home</a></div>
 </body>
 </html>
