--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <div><img src="images/picture.jpg"/></div>
     <div><a href="Grid/Grid.html">Grid Demo</a></div>
+    <div><a href="canyon-description/canyon.html">Canyon</a></div>
 </body>
 </html>
